openmediavault (7.0-13) unstable; urgency=low

  * Upgrade to Debian 12 (Bookworm).
  * Relocate Linux MD device (Software RAID) management into a
    separate plugin.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 24 Jul 2023 13:17:39 +0200

openmediavault (6.9.10-1) stable; urgency=low

  * Add omv-release-upgrade to allow users to migrate their
    systems to OMV7 (Sandworm) which is based on Debian 12
    (Bookworm).

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 08 Dec 2023 11:48:57 +0100

openmediavault (6.9.9-1) stable; urgency=low

  * Configure exports only for enabled NFS versions.
  * Enhance database query to prevent an error when trying
    to run a SMART scheduled task via UI.
  * Fix bug in Avahi configuration.
  * Issue #485: Display device temperatures in the SMART
    dashboard widget.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 17 Nov 2023 23:53:24 +0100

openmediavault (6.9.8-1) stable; urgency=low

  * Display RPI CM4 CPU model in system information.
  * Fix an error in the weekly cron job that is downloading the
    SMART database.
  * Hardening `omv-sfsnapadm` by skipping snapshots with invalid
    naming schema.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Nov 2023 17:40:53 +0100

openmediavault (6.9.7-3) stable; urgency=low

  * Various improvements.
  * Prevent the creation of Btrfs snapshots from snapshots.
  * Do not delete Btrfs snapshots that are used as shared folders.
  * Skip the deletion of Btrfs snapshots with subordinate subvolumes.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Nov 2023 20:05:35 +0100

openmediavault (6.9.6-2) stable; urgency=low

  * Issue #1619: Refactor SMART device type detection.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 01 Nov 2023 12:46:15 +0100

openmediavault (6.9.5-1) stable; urgency=low

  * Various improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 21 Oct 2023 15:31:38 +0200
