@@ -35,9 +35,12 @@ def is_ethernet(name):
     # Examples:
     # - eth0
     # - enp2s0
-    # - enp2s0f0
+    # - enp2s0f0, enp5165p0s0
     # - enx00259025963a
     # - ens1
+    # - eno16777736
+    # - encf5f0, enx026d3c00000a
+    # - end0
     #
     # Predictable network interface device name types:
     # - BCMA bus core number
@@ -54,13 +57,15 @@ def is_ethernet(name):
     #   [P<domain>]p<bus>s<slot>[f<function>][n<phys_port_name>|d<dev_port>]
     # - USB port number chain
     #   [P<domain>]p<bus>s<slot>[f<function>][u<port>][..][c<config>][i<interface>]
+    # - Device tree
+    #   d<number>
     #
     # Understanding systemd’s predictable network device names:
     # https://github.com/systemd/systemd/blob/master/src/udev/udev-builtin-net_id.c
     return bool(
         re.match(
             r'^eth[0-9]+|'
-            r'en(b\d+|c\d+|o\d+(n\S+|d\d+)?|s\d+(f\d+)?(n\S+|d\d+)?|'
+            r'en(b\d+|c\d+|d\d+|o\d+(n\S+|d\d+)?|s\d+(f\d+)?(n\S+|d\d+)?|'
             r'x[\da-f]{12}|(P\d+)?p\d+s\d+(f\d+)?(n\S+|d\d+)?|'
             r'(P\d+)?p\d+s\d+(f\d+)?(u\d+)*(c\d+)?(i\d+)?)$',
             name
